--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <body>
   <!-- HEADER / NAVIGATION -->
   <div class="container-fluid">
-        <div class="row pt-4 pb-3 align-items-center header-row">
-            <!-- Logo CS -->
-            <div class="col-6 col-lg-2">
-              <a href="#" class="logo-cs">CS</a>
-            </div>
+        <div class="row pt-3 pb-3 align-items-center header-row">
+            <div class="col-6 col-lg-1 offset-lg-0">
+    <a href="#" class="logo-cs">CS</a>
+</div>
             
             <!-- Menu Desktop -->
             <div class="col-lg-9 nav-wrapper d-none d-lg-block">
@@ -62,9 +61,9 @@
 
     <!-- HERO SECTION - INK & SHAPE -->
     <section class="hero-section">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
+        <div class="container-fluid content-wrapper">
+            <div class="row justify-content-end">
+                <div class="col-6">
                     <h1 class="hero-title">Ink &<br>Shape</h1>
                 </div>
             </div>
@@ -76,9 +75,9 @@
         <div class="container-fluid content-wrapper">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-                    <img class="img-fluid" src="img/IMG_7217.jpg" alt="Chi sono">
+                    <img class="img-fluid" src="img/IMG_7217.jpg" alt="Chi sono" style="width: 100vw;">
                 </div>
-                <div class="col-12 col-lg-5 offset-lg-1">
+                <div class="col-12 col-lg-4 offset-lg-1">
                     <h2 class="section-title">Chi sono?</h2>
                     <p class="section-text">
                         Sono Chiara e con ogni progetto cerco di trovare il mio posto.
@@ -94,13 +93,14 @@
     <!-- SEZIONE FORMAZIONE -->
     <section id="formazione" class="section-formazione">
         <div class="container-fluid content-wrapper">
-            <div class="row">
-                <div class="col-12 col-lg-5 offset-lg-1">
+             <div class="row justify-content-end">
+                <div class="col-12 col-lg-4">
                     <h2 class="section-title">Formazione</h2>
                     <p class="section-text">
                         Il mio percorso di studi è iniziato al Liceo delle Scienze Umane, esperienza che mi ha dato solide basi umanistiche e sociali. Successivamente ho deciso di cambiare rotta, intraprendendo un nuovo cammino all’Università di Design di San Marino, dove sto approfondendo la mia passione per la creatività e la progettazione.
                     </p>
                 </div>
+                <div class="col-lg-1"></div>
             </div>
         </div>
     </section>
@@ -113,42 +113,8 @@
                     <h2 class="section-title-progetti">I MIEI PROGETTI</h2>
                 </div>
             </div>
-
-            <!-- Prima riga progetti (4 colonne) -->
-            <div class="row progetti-grid mb-4">
-                <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                    <div class="progetto-item">
-                        <img class="img-fluid" src="img/manifesto1.jpg" alt="Manifesto Nuovastoria">
-                        <h3 class="progetto-nome">Manifesto</h3>
-                        <p class="progetto-descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor sit amet dolor eu sodales.</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                    <div class="progetto-item">
-                        <img class="img-fluid" src="img/totebag2.jpg" alt="Tote Bag">
-                        <h3 class="progetto-nome">Tote Bag</h3>
-                        <p class="progetto-descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor sit amet dolor eu sodales.</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                    <div class="progetto-item">
-                        <img class="img-fluid" src="img/badge.jpg" alt="Badge">
-                        <h3 class="progetto-nome">Badge</h3>
-                        <p class="progetto-descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor sit amet dolor eu sodales.</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                    <div class="progetto-item">
-                        <img class="img-fluid" src="img/felpa.jpg" alt="Felpa">
-                        <h3 class="progetto-nome">Felpa</h3>
-                        <p class="progetto-descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor sit amet dolor eu sodales.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- FASCIA BIANCA - PROGETTO D'ESAME -->
+           
+            <!-- FASCIA BIANCA - PROGETTO D'ESAME -->
     <section class="section-esame">
         <div class="container-fluid content-wrapper">
             <div class="row">
@@ -159,17 +125,53 @@
         </div>
     </section>
 
+            <!-- Prima riga progetti (4 colonne) -->
+            <div class="row progetti-grid mb-4">
+                <div class="col-12 col-sm-6 col-lg-3 mb-4">
+                    <div class="progetto-item">
+                        <img class="img-fluid" src="img/manifesto1.jpg" alt="Manifesto Nuovastoria">
+                        <h3 class="progetto-nome">Manifesto</h3>
+                        <p class="progetto-descrizione">Lavoro realizzato per il corso di Laboratorio della comunicazione ad UNIRSM Design. 
+L’obiettivo era la trasformazione dell’ “Ex cinema Astoria” da cinema di quartiere ad hub di comunità.
+Il tema centrale è “l’aggregazione” e mira a rappresentare visivamente i valori di connessione, inclusività e collaborazione, a partire dallo stesso logo.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-4">
+                    <div class="progetto-item">
+                        <img class="img-fluid" src="img/totebag2.jpg" alt="Tote Bag">
+                        <h3 class="progetto-nome">Tote Bag</h3>
+                        <p class="progetto-descrizione">In questa tote bag l’attenzione è focalizzata sul pay-off e sul font, parzialmente realizzato da noi studenti per esprimere al meglio i concetti di fluidità e connessione.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-4">
+                    <div class="progetto-item">
+                        <img class="img-fluid" src="img/badge.jpg" alt="Badge">
+                        <h3 class="progetto-nome">Badge</h3>
+                        <p class="progetto-descrizione">Badge realizzato con estrema cura per rappresentare visivamente i valori di connessione, inclusività e collaborazione.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-4">
+                    <div class="progetto-item">
+                        <img class="img-fluid" src="img/felpa.jpg" alt="Felpa">
+                        <h3 class="progetto-nome">Felpa</h3>
+                        <p class="progetto-descrizione">Felpa minimal che rappresenta l’essenza del progetto attraverso l’inserimento del logo e del naming.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- SEZIONE PROTEGGI LA SCHIENA -->
     <section class="section-paraschiena">
         <div class="container-fluid content-wrapper">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-                    <img class="img-fluid" src="img/paraschiena.jpg" alt="Paraschiena">
+                    <img class="img-fluid" src="img/paraschiena.jpg" alt="Protezione toracica">
                 </div>
                 <div class="col-12 col-lg-5 offset-lg-1">
-                    <h2 class="section-title-black">PROTEGGI LA SCHIENA</h2>
+                    <h2 class="section-title-black">PROTEZIONE TORACICA</h2>
                     <p class="section-text">
-                        Progetto d'esame per il corso di Elaborati di Design, dove viene presentato e spiegato un oggetto che migliora la qualità della vita quotidiana, rendendo semplici gesti più sicuri ed efficaci. Il prodotto è stato realizzato in classe.
+                        Progetto e modellazione di un sistema di protezione toracica dedicato alla pratica della mountain bike, sviluppato nell’ambito dell’esame del corso di Rappresentazione Digitale Tridimensionale. Il lavoro è stato realizzato attraverso l’utilizzo del software Rhinoceros 3D, con l’obiettivo di creare un modello digitale che unisca sicurezza, comodità e un aspetto curato.
                     </p>
                 </div>
             </div>
@@ -201,15 +203,15 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-4 mb-4 mb-lg-0">
-                    <h3 class="progetto-titolo">CAPPELLO IN PELLE</h3>
+                    <h3 class="progetto-titolo">COPRICAPO IN FELTRO</h3>
                     <p class="progetto-testo">
-                        Cappello in pelle creato nel corso di Elaborati di Design, adattando un pattern e utilizzando diverse forme e colori al lavoro di gruppo.
+                        Copricapo in feltro realizzato artigianalmente durante un workshop con Reinhard Plank, sperimentando e valorizzando le diverse caratteristiche del materiale con cui l’artista lavora abitualmente.
                     </p>
                 </div>
                 <div class="col-12 col-lg-4">
                     <h3 class="progetto-titolo">IL DESIGN OGGI - "100+1 DESIGNER OGGI"</h3>
                     <p class="progetto-testo">
-                        Rivista e presentazione per il corso di Storia, Arte e Design, dove viene analizzato l'autore scelto in classe e le sue opere per gli studenti.
+                        Rivista di approfondimento sul designer Thilo Alex Brunner, realizzata in gruppo insieme ai miei compagni per il corso universitario Storia del Design.
                     </p>
                 </div>
             </div>
@@ -221,7 +223,7 @@
         <div class="container-fluid content-wrapper">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="footer-text">"TIENI, ascensore è innovazione. Il design non muore mai"</p>
+                    <p class="footer-text">"Stile, armonia e innovazione: il design che racconta chi sei."</p>
                     <div class="footer-social">
                         <a href="#" class="social-link">Instagram</a>
                     </div>
