--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container-fluid content-wrapper">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-                    <img class="chi-sono-img" src="img/IMG_7216.JPG" alt="Chi sono">
+                    <img class="chi-sono-img" src="img/IMG_7216.jpg" alt="Chi sono">
                 </div>
                 <div class="col-12 col-lg-4 offset-lg-1">
                     <h2 class="section-title">Chi sono?</h2>
