--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Il tema centrale è "l'aggregazione" e mira a rappresentare visivamente i valori
                     <div class="progetto-item">
                         <img class="custom-img" src="img/badge.jpg" alt="Badge">
                         <h3 class="progetto-nome">Badge</h3>
-                        <p class="progetto-descrizione">Badge realizzato con estrema cura per rappresentare visivamente i valori di connessione, inclusività e collaborazione..</p>
+                        <p class="progetto-descrizione">Badge realizzato con estrema cura per rappresentare visivamente i valori di connessione, inclusività e collaborazione.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-4">
