--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container-fluid content-wrapper">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-                    <img class="chi-sono-img" src="img/IMG_7216.jpg" alt="Chi sono">
+                    <img class="chi-sono-img" src="img/img_7216.webp" alt="Chi sono">
                 </div>
                 <div class="col-12 col-lg-4 offset-lg-1">
                     <h2 class="section-title">Chi sono?</h2>
@@ -132,7 +132,7 @@
             <div class="row progetti-grid">
                 <div class="col-12 col-sm-6 col-lg-3 mb-4">
                     <div class="progetto-item">
-                        <img class="custom-img" src="img/manifesto1.jpg" alt="Manifesto Nuovastoria">
+                        <img class="custom-img" src="img/manifesto1.webp" alt="Manifesto Nuovastoria">
                         <h3 class="progetto-nome">Manifesto</h3>
                         <p class="progetto-descrizione">Lavoro realizzato per il corso di Laboratorio della comunicazione ad UNIRSM Design. 
 L'obiettivo era la trasformazione dell' "Ex cinema Astoria" da cinema di quartiere ad hub di comunità.
@@ -141,21 +141,21 @@ Il tema centrale è "l'aggregazione" e mira a rappresentare visivamente i valori
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-4">
                     <div class="progetto-item">
-                        <img class="custom-img" src="img/totebag2.jpg" alt="Tote Bag">
+                        <img class="custom-img" src="img/totebag2.webp" alt="Tote Bag">
                         <h3 class="progetto-nome">Tote Bag</h3>
                         <p class="progetto-descrizione">In questa tote bag l'attenzione è focalizzata sul pay-off e sul font, parzialmente realizzato da noi studenti per esprimere al meglio i concetti di fluidità e connessione.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-4">
                     <div class="progetto-item">
-                        <img class="custom-img" src="img/badge.jpg" alt="Badge">
+                        <img class="custom-img" src="img/badge.webp" alt="Badge">
                         <h3 class="progetto-nome">Badge</h3>
                         <p class="progetto-descrizione">Badge realizzato con estrema cura per rappresentare visivamente i valori di connessione, inclusività e collaborazione.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-4">
                     <div class="progetto-item">
-                        <img class="custom-img" src="img/felpa.jpg" alt="Felpa">
+                        <img class="custom-img" src="img/felpa.webp" alt="Felpa">
                         <h3 class="progetto-nome">Felpa</h3>
                         <p class="progetto-descrizione">Felpa minimal che rappresenta l'essenza del progetto attraverso l'inserimento del logo e del naming.</p>
                     </div>
@@ -170,7 +170,7 @@ Il tema centrale è "l'aggregazione" e mira a rappresentare visivamente i valori
         <div class="container-fluid content-wrapper">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-                    <img class="paraschiena-img" src="img/paraschiena.jpg" alt="protezionetoracica">
+                    <img class="paraschiena-img" src="img/paraschiena.webp" alt="protezionetoracica">
                 </div>
                 <div class="col-12 col-lg-4 offset-lg-1">
                     <h2 class="section-textparaschiena">PROTEZIONE TORACICA</h2>
@@ -188,7 +188,7 @@ Il tema centrale è "l'aggregazione" e mira a rappresentare visivamente i valori
             <div class="row">
                 <!-- Progetto 1 -->
                 <div class="col-12 col-lg-4 mb-4 mb-lg-0">
-                    <img class="img-fluid" src="img/MANIF.jpg" alt="Locked in Between ">
+                    <img class="img-fluid" src="img/manif.webp" alt="Locked in Between ">
                     <h3 class="progetto-titolo"><br>MANIFESTO CINEMA LOCKED IN BETWEEN</h3>
                     <p class="progetto-testo">
                         Manifesto che rappresenta, nell'ambito del territorio, il concetto di confine, esplorandone il significato e le implicazioni attraverso lo spazio e i colori.
@@ -197,7 +197,7 @@ Il tema centrale è "l'aggregazione" e mira a rappresentare visivamente i valori
                 
                 <!-- Progetto 2 -->
                 <div class="col-12 col-lg-4 mb-4 mb-lg-0">
-                    <img class="img-fluid" src="img/Rectangle 2.jpg" alt="Cappello in feltro">
+                    <img class="img-fluid" src="img/cappello.webp" alt="Cappello in feltro">
                     <h3 class="progetto-titolo"><br>CAPPELLO IN FELTRO</h3>
                     <p class="progetto-testo">
                         Cappello in feltro realizzato artigianalmente durante un workshop con Reinhard Plank, sperimentando e valorizzando le diverse caratteristiche del materiale con cui l'artista lavora abitualmente.
@@ -206,7 +206,7 @@ Il tema centrale è "l'aggregazione" e mira a rappresentare visivamente i valori
                 
                 <!-- Progetto 3 -->
                 <div class="col-12 col-lg-4">
-                    <img class="img-fluid" src="img/modificathilo.jpg" alt="Il Design Oggi">
+                    <img class="img-fluid" src="img/modificathilo.webp" alt="Il Design Oggi">
                     <h3 class="progetto-titolo">IL DESIGN OGGI E'... 100+1 DESIGNER OGGI</h3>
                     <p class="progetto-testo">
                          Rivista di approfondimento sul designer Thilo Alex Brunner, realizzata in gruppo insieme ai miei compagni per il corso universitario Storia del Design.
