--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Ink & Shape - Portfolio</title>
   <link rel="stylesheet" href="css/bootstrap-grid.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.ico">
 </head>
 <body>
   <!-- HEADER / NAVIGATION -->
